[package]
name = "Snake"
version = "0.1.0"
authors = ["dmesa2 <dmesa2@pdx.edu>, Kennedy Hahn, Harriet Adkins"]
edition = "2018"

[dependencies]
rand = "0.3.18"
piston_window = "0.74.0"
current = "0.1.2"
piston-music = "0.25.1"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["mixer"]

[dev-dependencies]
pistoncore-sdl2_window = "0.53.0"
